# hamlib_ex

./: .gitignore  README.md  mix.exs  smoke.exs
android/hamlib/: README.md  build-hamlib-android.sh  gen_patch.py
android/hamlib/patches/: 0001-android-usb-serial-bridge.patch
android/hamlib/src/: android_serial_bridge.c  android_serial_bridge.h
docs/: ANDROID_BRIDGE.md
lib/: hamlib.ex
lib/hamlib/: nif.ex  rig.ex
native/hamlib_nif/: Cargo.toml  build.rs
native/hamlib_nif/c_src/: hamlib_shim.c  hamlib_shim.h  smoke.c
native/hamlib_nif/src/: lib.rs
